discussion/kv_engine/173323/173323_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Unify "Disk" and "Memory" backfills

Both types of backfill can now share the same state machine. This
is done by moving the state machine code into DCPBackfill and
removing the now duplicate code from each of the sub-classes.

The DCP backfill hierarchy is now much simpler.

                DCPBackfillIface
                        |
                    DCPBackfill
                        |
       .----------------.-----------------------.
       |                |                       |
DCPBackfillByIdDisk DCPBackfillByIdSeqno DCPBackfillMemoryBuffered

The concrete classes also bring in extra classes for sharing common
data.

DCPBackfillBySeqno is shared by DCPBackfillByIdSeqno and
DCPBackfillMemoryBuffered. This defines the seqno range variables
required for scanning a seqno range.

DCPBackfillDisk is shared by DCPBackfillByIdDisk and
DCPBackfillByIdSeqno. This defines the ScanContext and KVBucket
variables required for a disk scan.

Change-Id: Ibd1fa31fa072b6e71937b3a6e2a1035e95223680

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-08 21:12:07.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-08 21:19:32.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45987/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45987/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38621/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill.cc:23:20:
error: no member named "makeGuard" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38621/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17352/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3: error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1853:23: note: in instantiation of function template specialization "fmt::v8::detail::make_arg<true, fmt::v8::basic_format_context<fmt::v8::appender, char>, fmt::v8::detail::type::custom_type, Vbid &, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1872:10: note: in instantiation of function template specialization "fmt::v8::format_arg_store<fmt::v8::basic_format_context<fmt::v8::appender, char>, char [45], Vbid>::format_arg_store<char const (&)[45], Vbid &>" requested here
  return {std::forward<Args>(args)...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:3119:28: note: in instantiation of function template specialization "fmt::v8::make_format_args<fmt::v8::basic_format_context<fmt::v8::appender, char>, char const (&)[45], Vbid &>" requested here
  return vformat(fmt, fmt::make_format_args(args...));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:45:37: note: in instantiation of function template specialization "fmt::v8::format<char const (&)[45], Vbid>" requested here
        throw std::logic_error(fmt::format("{}: {} called in State::Done",
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:23:20: error: no member named "makeGuard" in namespace "folly" [clang-diagnostic-error]
            folly::makeGuard([start = std::chrono::steady_clock::now(), this] {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9: error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
        EP_LOG_WARN(
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17352/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3:
error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17352/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18301/ : FAILURE

Compile error at [2022-05-08T21:15:50.962Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18301/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6963/ : FAILURE

Compile error at [2022-05-08T21:13:58.873Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6963/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19453/ : FAILURE

Compile error at [2022-05-08T21:17:21.211Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19453/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20138/ : FAILURE

Compile error at [2022-05-08T21:17:18.539Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20138/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7055/ : FAILURE

Compile error at [2022-05-08T21:14:56.926Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7055/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19110/ : FAILURE

Compile error at [2022-05-08T21:16:28.807Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19110/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27510/ : FAILURE

Compile error at [2022-05-08T21:18:09.120Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27510/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16355/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
